[gd_scene load_steps=7 format=3 uid="uid://b8j4qxm7wqr2k"]

[ext_resource type="Script" uid="uid://dwdkypobxgotu" path="res://scripts/core/Player.gd" id="1_m8k4n"]
[ext_resource type="Script" uid="uid://bfwlhrb7g6kg3" path="res://scripts/core/Creature.gd" id="2_k7x9p"]
[ext_resource type="Script" uid="uid://bf2uh1wlf6nd5" path="res://scripts/core/NPC.gd" id="3_p5w8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 80.0

[node name="TestScene" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.2, 0.3, 0.2, 1)

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(200, 300)
script = ExtResource("1_m8k4n")
debug_mode = true
show_interaction_range = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.5, 0.7, 1, 1)
scale = Vector2(32, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="InteractionArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/InteractionArea"]
shape = SubResource("CircleShape2D_1")
debug_color = Color(0, 0, 1, 0.3)

[node name="ObservationArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/ObservationArea"]
shape = SubResource("CircleShape2D_2")
debug_color = Color(0, 1, 0, 0.2)

[node name="InteractionDetector" type="RayCast2D" parent="Player"]

[node name="ObservationCamera" type="Camera2D" parent="Player"]

[node name="Audio" type="Node2D" parent="Player"]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="Player/Audio"]

[node name="Interaction" type="AudioStreamPlayer2D" parent="Player/Audio"]

[node name="Effects" type="Node2D" parent="Player"]

[node name="MovementParticles" type="GPUParticles2D" parent="Player/Effects"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]

[node name="TestCreature1" type="CharacterBody2D" parent="." groups=["creatures"]]
position = Vector2(400, 200)
script = ExtResource("2_k7x9p")
creature_id = "maurice_rat"
debug_mode = true

[node name="Sprite2D" type="Sprite2D" parent="TestCreature1"]
modulate = Color(0.8, 0.6, 0.4, 1)
scale = Vector2(24, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestCreature1"]
scale = Vector2(0.6, 0.4)
shape = SubResource("RectangleShape2D_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TestCreature1"]

[node name="TestCreature2" type="CharacterBody2D" parent="." groups=["creatures"]]
position = Vector2(600, 400)
script = ExtResource("2_k7x9p")
creature_id = "pigeon_ankh"
debug_mode = true

[node name="Sprite2D" type="Sprite2D" parent="TestCreature2"]
modulate = Color(0.6, 0.6, 0.8, 1)
scale = Vector2(20, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestCreature2"]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TestCreature2"]

[node name="TestNPC" type="CharacterBody2D" parent="." groups=["npcs"]]
position = Vector2(800, 300)
script = ExtResource("3_p5w8q")

[node name="Sprite2D" type="Sprite2D" parent="TestNPC"]
modulate = Color(1, 0.8, 0.6, 1)
scale = Vector2(28, 44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestNPC"]
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_1")

[node name="InteractionArea" type="Area2D" parent="TestNPC"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestNPC/InteractionArea"]
shape = SubResource("CircleShape2D_1")
debug_color = Color(1, 1, 0, 0.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TestNPC"]

[node name="Environment" type="Node2D" parent="."]

[node name="Walls" type="StaticBody2D" parent="Environment"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Walls"]
position = Vector2(576, 0)
shape = SubResource("RectangleShape2D_1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Environment/Walls"]
position = Vector2(576, 648)
shape = SubResource("RectangleShape2D_1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Environment/Walls"]
position = Vector2(0, 324)
shape = SubResource("RectangleShape2D_1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Environment/Walls"]
position = Vector2(1152, 324)
shape = SubResource("RectangleShape2D_1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugLabel" type="Label" parent="UI"]
offset_right = 300.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "CONTROLS:
WASD - Move
SHIFT - Run  
E - Interact
HOLD MOUSE - Observe
ESC - Pause"

[node name="InfoLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "TEST SCENE v1.0
- Blue Player
- Brown/Blue Creatures  
- Yellow NPC
- Interaction zones visible"
